# rovermk2_description

./: CMakeLists.txt  README.md  package.xml
config/: controller.yaml  joint_names_B2_mark_02.yaml  pc_config.yaml
launch/: controllers.launch.py  display.launch.py  gazebo.launch.py  ignition.launch.py  rtabmap.launch.py  teleop.launch.py
meshes/: Steer_FL_1.STL  base_link.STL  diff_1.STL  diff_2.STL  diffrential.STL  steer_BL.STL  steer_BR.STL  steer_FR.STL  suspension_1.STL  suspension_2.STL  wheelBL.STL  wheelBR.STL  wheelFL.STL  wheelFR.STL
rovermk2_description/: cmdvel_controller.py  controller.py  steerdeg_pub.py
urdf/: B2_mark_02.csv  B2_mark_02.urdf  B2_mark_03_static.urdf  B2_mark_sensors.urdf  converted.sdf  expanded.urdf  robot_mk2.urdf.xacro  rovermk2.urdf
worlds/: rover.world  rover_classic.world  rover_map.world
