<?xml version="1.0"?>
<package format="3">
  <name>rovermk2_description</name>
  <version>1.0.0</version>
  <description>Mars Rover Mk1 URDF and meshes</description>

  <maintainer email="you@email.com">Arpit</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>velocity_controllers</depend>
  <depend>position_controllers</depend>
  <depend>gazebo_ros</depend>
  <depend>tf2_ros</depend>

  <exec_depend>teleop_twist_keyboard</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
